--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     background-color: #de63ee;
     position: relative;
     min-height: 100vh;
+   
   }
   
   h1 {
@@ -21,6 +22,7 @@
   
   .digital-clock {
     font-size: 500%;
+    width: 100vw;
     color: #f34d1b;
     border: 1px solid #7ee771;
     display: flex;
@@ -32,7 +34,7 @@
   /* Layout */
   .main {
     display: flex;
-    padding: 2em;
+    /* padding: 2em; */
     height: 90vh;
     justify-content: center;
     align-items: middle;
@@ -149,4 +151,11 @@ z-index: 11;
     width: 10px;
     height: 35%;
     background-color: black;
+}
+
+@media (max-width: 510px) {
+    .clock-dial{
+        width: 320px;
+        height: 320px;
+    }
 }
